# middleware/validate.js
@@ -1,26 +1,54 @@
 const validator = require('../helpers/validate');
 
+const saveBook = (req, res, next) => {
+    const validationRule = {
+        title: 'required|string',
+        author: 'required|string',
+        publication_year: 'required|integer',
+        genre: 'string',
+        pages: 'integer',
+        publisher: 'string',
+        language: 'string',
+        isbn: 'string',
+        rating: 'integer',
+        movie_adaptation: 'boolean',
+        series: 'boolean'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
 const saveContact = (req, res, next) => {
-  const validationRule = {
-    firstName: 'required|string',
-    lastName: 'required|string',
-    email: 'required|email',
-    favoriteColor: 'required|string',
-    birthday: 'string'
-  };
-  validator(req.body, validationRule, {}, (err, status) => {
-    if (!status) {
-      res.status(400).send({
-        success: false,
-        message: 'Validation failed',
-        data: err
-      });
-    } else {
-      next();
-    }
-  });
+    const validationRule = {
+        firstName: 'required|string',
+        lastName: 'required|string',
+        email: 'required|email',
+        favoriteColor: 'string',
+        birthday: 'string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
 };
 
 module.exports = {
-  saveContact
+    saveBook,
+    saveContact
 };
