# swagger.json
@@ -1,26 +1,47 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "CSE341 Web Services API",
-    "description": "API for managing contacts and books, built for CSE341.",
+    "title": "Temples Api",
+    "description": "Temples Api",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Contacts",
-      "description": "API for contacts in the database"
-    },
-    {
-      "name": "Books",
-      "description": "API for books in the database"
-    }
-  ],
   "schemes": [
+    "https",
     "http"
   ],
   "paths": {
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api-docs": {
       "get": {
         "description": "",
@@ -31,7 +52,7 @@
         }
       }
     },
-    "/contacts/": {
+    "/temples/": {
       "get": {
         "description": "",
         "produces": [
@@ -41,38 +62,34 @@
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "post": {
+        "tags": [],
         "description": "",
         "parameters": [
-          {
-            "name": "x-api-key",
-            "in": "header",
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "templeName": {
                   "example": "any"
                 },
-                "lastName": {
+                "country": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "dateDedication": {
                   "example": "any"
                 },
-                "birthday": {
+                "phone": {
                   "example": "any"
                 }
               }
@@ -80,14 +97,14 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
-          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -95,7 +112,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/temples/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -115,16 +132,11 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
       "put": {
+        "tags": [],
         "description": "",
         "parameters": [
           {
@@ -134,29 +146,24 @@
             "type": "string"
           },
           {
-            "name": "x-api-key",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "templeName": {
                   "example": "any"
                 },
-                "lastName": {
+                "country": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "dateDedication": {
                   "example": "any"
                 },
-                "birthday": {
+                "phone": {
                   "example": "any"
                 }
               }
@@ -164,17 +171,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
-          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -189,11 +193,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "x-api-key",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
@@ -206,16 +205,13 @@
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/books/": {
+    "/places/": {
       "get": {
         "description": "",
         "produces": [
@@ -225,56 +221,34 @@
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "post": {
+        "tags": [],
         "description": "",
         "parameters": [
-          {
-            "name": "x-api-key",
-            "in": "header",
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "namePlace": {
                   "example": "any"
                 },
-                "author": {
+                "altitude": {
                   "example": "any"
                 },
-                "publication_year": {
+                "email": {
                   "example": "any"
                 },
-                "genre": {
+                "phone": {
                   "example": "any"
                 },
-                "pages": {
-                  "example": "any"
-                },
-                "publisher": {
-                  "example": "any"
-                },
-                "language": {
-                  "example": "any"
-                },
-                "isbn": {
-                  "example": "any"
-                },
-                "rating": {
-                  "example": "any"
-                },
-                "movie_adaptation": {
-                  "example": "any"
-                },
-                "series": {
+                "sport": {
                   "example": "any"
                 }
               }
@@ -282,14 +256,14 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
-          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -297,7 +271,7 @@
         }
       }
     },
-    "/books/{id}": {
+    "/places/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -317,16 +291,11 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
       "put": {
+        "tags": [],
         "description": "",
         "parameters": [
           {
@@ -336,47 +305,24 @@
             "type": "string"
           },
           {
-            "name": "x-api-key",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "namePlace": {
                   "example": "any"
                 },
-                "author": {
+                "altitude": {
                   "example": "any"
                 },
-                "publication_year": {
+                "email": {
                   "example": "any"
                 },
-                "genre": {
+                "phone": {
                   "example": "any"
                 },
-                "pages": {
-                  "example": "any"
-                },
-                "publisher": {
-                  "example": "any"
-                },
-                "language": {
-                  "example": "any"
-                },
-                "isbn": {
-                  "example": "any"
-                },
-                "rating": {
-                  "example": "any"
-                },
-                "movie_adaptation": {
-                  "example": "any"
-                },
-                "series": {
+                "sport": {
                   "example": "any"
                 }
               }
@@ -384,17 +330,14 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
-          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -409,11 +352,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "x-api-key",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
@@ -426,94 +364,9 @@
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
-        }
-      }
-    }
-  },
-  "definitions": {
-    "Contact": {
-      "type": "object",
-      "properties": {
-        "firstName": {
-          "type": "string",
-          "example": "John"
-        },
-        "lastName": {
-          "type": "string",
-          "example": "Doe"
-        },
-        "email": {
-          "type": "string",
-          "example": "john.doe@example.com"
-        },
-        "favoriteColor": {
-          "type": "string",
-          "example": "Blue"
-        },
-        "birthday": {
-          "type": "string",
-          "example": "1990-01-01"
-        }
-      }
-    },
-    "Book": {
-      "type": "object",
-      "properties": {
-        "title": {
-          "type": "string",
-          "example": "The Example Book"
-        },
-        "author": {
-          "type": "string",
-          "example": "Jane Doe"
-        },
-        "publication_year": {
-          "type": "number",
-          "example": 2020
-        },
-        "genre": {
-          "type": "array",
-          "example": [
-            "Fiction",
-            "Drama"
-          ],
-          "items": {
-            "type": "string"
-          }
-        },
-        "pages": {
-          "type": "number",
-          "example": 300
-        },
-        "publisher": {
-          "type": "string",
-          "example": "Example Publishing"
-        },
-        "language": {
-          "type": "string",
-          "example": "English"
-        },
-        "isbn": {
-          "type": "string",
-          "example": "1234567890123"
-        },
-        "rating": {
-          "type": "number",
-          "example": 4.5
-        },
-        "movie_adaptation": {
-          "type": "boolean",
-          "example": false
-        },
-        "series": {
-          "type": "string",
-          "example": "Example Series"
         }
       }
     }
